--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -88,6 +88,8 @@ Parameters:
     Type: String
   DovetailCountsLambdaCodeS3ObjectVersion:
     Type: String
+  CmsAudioLambdaCodeS3ObjectVersion:
+    Type: String
   ProxyPrxOrgCodeS3ObjectVersion:
     Type: String
   PRXUploadAccessKey:
@@ -207,6 +209,7 @@ Resources:
         UploadLambdaCodeS3ObjectVersion: !Ref UploadLambdaCodeS3ObjectVersion
         DovetailBytesLambdaCodeS3ObjectVersion: !Ref DovetailBytesLambdaCodeS3ObjectVersion
         DovetailCountsLambdaCodeS3ObjectVersion: !Ref DovetailCountsLambdaCodeS3ObjectVersion
+        CmsAudioLambdaCodeS3ObjectVersion: !Ref CmsAudioLambdaCodeS3ObjectVersion
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
