--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -90,6 +90,8 @@ Parameters:
     Type: String
   CmsAudioLambdaCodeS3ObjectVersion:
     Type: String
+  CmsImageLambdaCodeS3ObjectVersion:
+    Type: String
   ProxyPrxOrgCodeS3ObjectVersion:
     Type: String
   PRXUploadAccessKey:
@@ -210,6 +212,7 @@ Resources:
         DovetailBytesLambdaCodeS3ObjectVersion: !Ref DovetailBytesLambdaCodeS3ObjectVersion
         DovetailCountsLambdaCodeS3ObjectVersion: !Ref DovetailCountsLambdaCodeS3ObjectVersion
         CmsAudioLambdaCodeS3ObjectVersion: !Ref CmsAudioLambdaCodeS3ObjectVersion
+        CmsImageLambdaCodeS3ObjectVersion: !Ref CmsImageLambdaCodeS3ObjectVersion
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
