--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -35,6 +35,8 @@ Parameters:
     Type: String
   CmsAudioLambdaCodeS3ObjectVersion:
     Type: String
+  CmsImageLambdaCodeS3ObjectVersion:
+    Type: String
 Resources:
   UploadLambdaStack:
     Type: "AWS::CloudFormation::Stack"
@@ -165,4 +167,36 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "cms-audio-lambda.yml"]]
+      TimeoutInMinutes: 5
+  CmsImageLambdaStack:
+    Type: "AWS::CloudFormation::Stack"
+    Properties:
+      NotificationARNs:
+        - Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+      Parameters:
+        AlarmWarnActions:
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+        AlarmErrorActions:
+          Fn::If:
+          - IsProduction
+          - Fn::ImportValue:
+              !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          - Fn::ImportValue:
+              !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+        CodeS3Bucket:
+          Fn::ImportValue:
+            !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
+        CodeS3ObjectVersion: !Ref CmsImageLambdaCodeS3ObjectVersion
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        DestinationBucketName: !Sub "/prx/${EnvironmentTypeAbbreviation}/cms-image-lambda/DESTINATION_BUCKET"
+        SqsCallbackName: !Sub "/prx/${EnvironmentTypeAbbreviation}/cms-image-lambda/SQS_CALLBACK_NAME"
+      Tags:
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "cms-image-lambda.yml"]]
       TimeoutInMinutes: 5
