--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -108,6 +108,7 @@ Resources:
         CreateWorker: "true"
         DesiredWebsProduction: "3"
         DesiredWorkersProduction: "6"
+        ErrorAlarmThreshold: "5"
         ContainerPort: "3000"
         HealthCheckPath: "/"
       Tags:
