--- a/stacks/container-apps/web-application.yml
+++ b/stacks/container-apps/web-application.yml
@@ -63,6 +63,9 @@ Parameters:
   DesiredWorkersProduction:
     Type: String
     Default: 1
+  ErrorAlarmThreshold:
+    Type: String
+    Default: 0
   # App ENV #################################################################
   AppName:
     Type: String # castle, crier, cms, feeder
@@ -183,7 +186,7 @@ Resources:
       Namespace: AWS/ApplicationELB
       Period: 60
       Statistic: Sum
-      Threshold: 0
+      Threshold: !Ref ErrorAlarmThreshold
       TreatMissingData: notBreaching
       Dimensions:
         - Name: LoadBalancer
