Try upgrading awscli

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
   install:
     commands:
       - 'echo "Installing CloudFormation Linter"'
-      - 'pip install cfn-lint'
+      - 'pip install awscli --upgrade && pip install cfn-lint'
   build:
     commands:
       - 'cd $(ls -d */|head -n 1)'
