Linting - must be string

--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -82,7 +82,7 @@ Resources:
       # IpAddressType: dualstack
       LoadBalancerAttributes:
         - Key: idle_timeout.timeout_seconds
-          Value: 150
+          Value: "150"
       Scheme: internet-facing
       SecurityGroups:
         - !Ref PlatformSecurityGroup
