--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
   build:
     commands:
       - 'cd $(ls -d */|head -n 1)'
-      - 'find . -name "*.yml" -type f ! -path "./node_modules/*" -mindepth 2 -print0 | xargs -0 -n1 cfn-lint --ignore-checks W --template'
+      - 'find . -name "*.yml" -type f ! -path "./node_modules/*" -mindepth 2 -print0 | xargs -0 -n1 cfn-lint --ignore-checks W E3002 --template'
   post_build:
       commands:
         - 'curl -sO "https://raw.githubusercontent.com/PRX/Infrastructure/master/ci/utility/post_build.sh" && chmod +x post_build.sh && bash ./post_build.sh'
