--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -77,7 +77,7 @@ Mappings:
     Production:
       InstanceType: t2.medium
       InstanceStorage: 72
-      AmiName: "amzn-ami-2018.03.b-amazon-ecs-optimized"
+      AmiName: "amzn-ami-2018.03.h-amazon-ecs-optimized"
       MinSize: "4"
       DefaultDesiredCapacity: "5"
       WarningThreshold: "35"
