--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -82,6 +82,8 @@ Parameters:
     Type: String
   AnalyticsIngestLambdaCodeS3ObjectVersion:
     Type: String
+  CmsImageLambdaCodeS3ObjectVersion:
+    Type: String
   DovetailStitchLambdaCodeS3ObjectVersion:
     Type: String
   DovetailBytesLambdaCodeS3ObjectVersion:
