Fix ffprobe location

--- a/stacks/serverless/cms-audio-lambda.yml
+++ b/stacks/serverless/cms-audio-lambda.yml
@@ -69,7 +69,7 @@ Resources:
       Environment:
         Variables:
           DESTINATION_BUCKET: !Ref DestinationBucketName
-          FFPROBE_PATH: /bin/ffprobe
+          FFPROBE_PATH: bin/ffprobe
           SQS_CALLBACK: !Sub https://sqs.${AWS::Region}.amazonaws.com/${AWS::AccountId}/${SqsCallbackName}
       Handler: index.handler
       MemorySize: 512
