--- a/stacks/serverless/cms-audio-lambda.yml
+++ b/stacks/serverless/cms-audio-lambda.yml
@@ -98,23 +98,23 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
   CmsAudioLambdaCreateTrigger:
-    Type: "AWS::Lambda::EventSourceMapping"
+    Type: "AWS::SNS::Subscription"
     Properties:
-      Enabled: true
-      EventSourceArn: !Join ["", [!Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:", !FindInMap [AnnounceTopicNames, !Ref EnvironmentType, create]]]
-      FunctionName: !Ref CmsAudioLambdaFunction
+      Endpoint: !GetAtt CmsAudioLambdaFunction.Arn
+      Protocol: lambda
+      TopicArn:  !Join ["", [!Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:", !FindInMap [AnnounceTopicNames, !Ref EnvironmentType, create]]]
   CmsAudioLambdaUpdateTrigger:
-    Type: "AWS::Lambda::EventSourceMapping"
+    Type: "AWS::SNS::Subscription"
     Properties:
-      Enabled: true
-      EventSourceArn: !Join ["", [!Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:", !FindInMap [AnnounceTopicNames, !Ref EnvironmentType, update]]]
-      FunctionName: !Ref CmsAudioLambdaFunction
+      Endpoint: !GetAtt CmsAudioLambdaFunction.Arn
+      Protocol: lambda
+      TopicArn:  !Join ["", [!Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:", !FindInMap [AnnounceTopicNames, !Ref EnvironmentType, update]]]
   CmsAudioLambdaDeleteTrigger:
-    Type: "AWS::Lambda::EventSourceMapping"
+    Type: "AWS::SNS::Subscription"
     Properties:
-      Enabled: true
-      EventSourceArn: !Join ["", [!Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:", !FindInMap [AnnounceTopicNames, !Ref EnvironmentType, delete]]]
-      FunctionName: !Ref CmsAudioLambdaFunction
+      Endpoint: !GetAtt CmsAudioLambdaFunction.Arn
+      Protocol: lambda
+      TopicArn:  !Join ["", [!Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:", !FindInMap [AnnounceTopicNames, !Ref EnvironmentType, delete]]]
   CmsAudioLambdaLogGroup:
     Type: "AWS::Logs::LogGroup"
     Properties:
