--- a/stacks/serverless/cms-image-lambda.yml
+++ b/stacks/serverless/cms-image-lambda.yml
@@ -97,23 +97,23 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
   CmsImageLambdaCreateTrigger:
-    Type: "AWS::Lambda::EventSourceMapping"
+    Type: "AWS::SNS::Subscription"
     Properties:
-      Enabled: true
-      EventSourceArn: !Join ["", [!Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:", !FindInMap [AnnounceTopicNames, !Ref EnvironmentType, create]]]
-      FunctionName: !Ref CmsImageLambdaFunction
+      Endpoint: !GetAtt CmsImageLambdaFunction.Arn
+      Protocol: lambda
+      TopicArn:  !Join ["", [!Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:", !FindInMap [AnnounceTopicNames, !Ref EnvironmentType, create]]]
   CmsImageLambdaUpdateTrigger:
-    Type: "AWS::Lambda::EventSourceMapping"
+    Type: "AWS::SNS::Subscription"
     Properties:
-      Enabled: true
-      EventSourceArn: !Join ["", [!Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:", !FindInMap [AnnounceTopicNames, !Ref EnvironmentType, update]]]
-      FunctionName: !Ref CmsImageLambdaFunction
+      Endpoint: !GetAtt CmsImageLambdaFunction.Arn
+      Protocol: lambda
+      TopicArn:  !Join ["", [!Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:", !FindInMap [AnnounceTopicNames, !Ref EnvironmentType, update]]]
   CmsImageLambdaDeleteTrigger:
-    Type: "AWS::Lambda::EventSourceMapping"
+    Type: "AWS::SNS::Subscription"
     Properties:
-      Enabled: true
-      EventSourceArn: !Join ["", [!Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:", !FindInMap [AnnounceTopicNames, !Ref EnvironmentType, delete]]]
-      FunctionName: !Ref CmsImageLambdaFunction
+      Endpoint: !GetAtt CmsImageLambdaFunction.Arn
+      Protocol: lambda
+      TopicArn:  !Join ["", [!Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:", !FindInMap [AnnounceTopicNames, !Ref EnvironmentType, delete]]]
   CmsImageLambdaLogGroup:
     Type: "AWS::Logs::LogGroup"
     Properties:
