Add invoke permissions

--- a/stacks/serverless/cms-audio-lambda.yml
+++ b/stacks/serverless/cms-audio-lambda.yml
@@ -103,18 +103,39 @@ Resources:
       Endpoint: !GetAtt CmsAudioLambdaFunction.Arn
       Protocol: lambda
       TopicArn:  !Join ["", [!Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:", !FindInMap [AnnounceTopicNames, !Ref EnvironmentType, create]]]
+  CmsAudioLambdaCreateTriggerPermission:
+    Type: "AWS::Lambda::Permission"
+    Properties:
+      Action: "lambda:InvokeFunction"
+      FunctionName: !Ref CmsAudioLambdaFunction
+      Principal: sns.amazonaws.com
+      SourceArn: !Join ["", [!Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:", !FindInMap [AnnounceTopicNames, !Ref EnvironmentType, create]]]
   CmsAudioLambdaUpdateTrigger:
     Type: "AWS::SNS::Subscription"
     Properties:
       Endpoint: !GetAtt CmsAudioLambdaFunction.Arn
       Protocol: lambda
       TopicArn:  !Join ["", [!Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:", !FindInMap [AnnounceTopicNames, !Ref EnvironmentType, update]]]
+  CmsAudioLambdaUpdateTriggerPermission:
+    Type: "AWS::Lambda::Permission"
+    Properties:
+      Action: "lambda:InvokeFunction"
+      FunctionName: !Ref CmsAudioLambdaFunction
+      Principal: sns.amazonaws.com
+      SourceArn: !Join ["", [!Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:", !FindInMap [AnnounceTopicNames, !Ref EnvironmentType, update]]]
   CmsAudioLambdaDeleteTrigger:
     Type: "AWS::SNS::Subscription"
     Properties:
       Endpoint: !GetAtt CmsAudioLambdaFunction.Arn
       Protocol: lambda
       TopicArn:  !Join ["", [!Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:", !FindInMap [AnnounceTopicNames, !Ref EnvironmentType, delete]]]
+  CmsAudioLambdaDeleteTriggerPermission:
+    Type: "AWS::Lambda::Permission"
+    Properties:
+      Action: "lambda:InvokeFunction"
+      FunctionName: !Ref CmsAudioLambdaFunction
+      Principal: sns.amazonaws.com
+      SourceArn: !Join ["", [!Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:", !FindInMap [AnnounceTopicNames, !Ref EnvironmentType, delete]]]
   CmsAudioLambdaLogGroup:
     Type: "AWS::Logs::LogGroup"
     Properties:
