Use latest cfn-lint; E3002 now fixed

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,11 +6,11 @@ phases:
   install:
     commands:
       - 'echo "Installing CloudFormation Linter"'
-      - 'pip install awscli --upgrade && pip install cfn-lint'
+      - 'pip install awscli --upgrade && pip install cfn-lint --upgrade'
   build:
     commands:
       - 'cd $(ls -d */|head -n 1)'
-      - 'find . -name "*.yml" -type f ! -path "./node_modules/*" -mindepth 2 -print0 | xargs -0 -n1 cfn-lint --ignore-checks W E3002 --template'
+      - 'find . -name "*.yml" -type f ! -path "./node_modules/*" -mindepth 2 -print0 | xargs -0 -n1 cfn-lint --ignore-checks W --template'
   post_build:
       commands:
         - 'curl -sO "https://raw.githubusercontent.com/PRX/Infrastructure/master/ci/utility/post_build.sh" && chmod +x post_build.sh && bash ./post_build.sh'
