Fix output and description of stack

--- a/it/storage/storage.yml
+++ b/it/storage/storage.yml
@@ -1,7 +1,6 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
-  Creates the standard S3 buckets that are necessary for launching the rest of
-  the infrastructure
+  Creates storage resources used for IT, such as S3 buckets
 Parameters:
   BucketNamePrefix:
     Type: String
@@ -25,4 +24,4 @@ Outputs:
   ConfluenceArchiveBucket:
     Value: !Ref ConfluenceArchiveBucket
     Export:
-      Name: !Sub ${AWS::StackName}-InfrastructureSupportBucket
+      Name: !Sub ${AWS::StackName}-ConfluenceArchiveBucket
