--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -426,7 +426,11 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
-      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/fourohfour.prx.org.yml"]]
+      TemplateURL: !Join
+        - ""
+        - - Fn::ImportValue: { "Fn::Sub": "${InfrastructureStorageStackName}-SourceBucketUrl" }
+          - !Ref InfrastructureGitCommit
+          - "/stacks/fourohfour.prx.org.yml"
       TimeoutInMinutes: 5
   PublishStack:
     Type: "AWS::CloudFormation::Stack"
