Clean up poller Lambda templates

--- a/etc/submittable-poller.yml
+++ b/etc/submittable-poller.yml
@@ -1,4 +1,4 @@
-# etc/workable-poller.yml
+# etc/submittable-poller.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Creates a Lambda function that polls the Submittable API and finds new
@@ -149,7 +149,7 @@ Resources:
               await publishMessage(messageForSubmissions(submissions));
           };
       Description: >
-        Gets recent job applicants from Workable and sends them to Slack via the
+        Gets recent submissions from Submittable and sends them to Slack via the
         Slack relay
       Environment:
         Variables:
@@ -197,7 +197,7 @@ Resources:
     Type: "AWS::Events::Rule"
     Properties:
       Description: >
-        Invokes the Workable poller function
+        Invokes the Submittable poller function
       RoleArn: !GetAtt PollerEventRuleIamRole.Arn
       ScheduleExpression:
         Fn::If:
