--- a/etc/eventbrite-webhooks.yml
+++ b/etc/eventbrite-webhooks.yml
@@ -6,6 +6,11 @@ Parameters:
     Type: String
   SlackMessageRelayTopicArn:
     Type: String
+  LogGroupRetentionPolicyFunctionArn:
+    Type: AWS::SSM::Parameter::Value<String>
+    Description: >
+      The Parameter Store key for the log group retention policy function's
+      ARN (not the ARN itself)
 Resources:
   # API Gateway
   RestApi:
@@ -257,3 +262,9 @@ Resources:
       Dimensions:
         - Name: FunctionName
           Value: !Ref LambdaFunction
+  LambdaFunctionLogRetentionPolicy:
+    Type: "Custom::LogGroupRetentionPolicy"
+    Properties:
+      ServiceToken: !Ref LogGroupRetentionPolicyFunctionArn
+      LogGroupName: !Sub "/aws/lambda/${LambdaFunction}"
+      RetentionInDays: 5
