Fix up Submittable poller

--- a/etc/submittable-poller.yml
+++ b/etc/submittable-poller.yml
@@ -66,7 +66,7 @@ Resources:
 
           const sns = new AWS.SNS({ apiVersion: '2010-03-31' });
 
-          const API_URL_BASE = 'api.submittable.com';
+          const API_URL_BASE = 'https://api.submittable.com';
 
           const SLACK_ICON = ':submittable:';
           const SLACK_USERNAME = 'Submittable';
@@ -111,7 +111,7 @@ Resources:
 
               console.log(`API return count: ${payload.items.length}`);
               return payload.items.filter(s => {
-                  const dateCreated = new Date(submission.date_created + '-06:00');
+                  const dateCreated = new Date(s.date_created + '-06:00');
                   return (dateCreated > periodThreshold);
               });
           }
@@ -150,7 +150,7 @@ Resources:
 
           exports.handler = async (event) => {
               const submissions = await getSubmissions();
-              console.log(`API return count: ${payload.items.length}`);
+              console.log(`API return count: ${submissions.length}`);
               await publishMessage(messageForSubmissions(submissions));
           };
       Description: >
