--- a/etc/cms-resource-reporter.yml
+++ b/etc/cms-resource-reporter.yml
@@ -104,7 +104,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: "[CMSResourceReporter][Lambda][Error] Invocation 4XX"
+      AlarmName: "[CMSResourceReporter][Lambda][Error] Invocation Error"
       AlarmDescription:
         The error rate on the CMS Resource reporter has exceeded 0.
       ComparisonOperator: GreaterThanThreshold
