parameterize the alarm name

--- a/etc/resource-reporter.yml
+++ b/etc/resource-reporter.yml
@@ -10,6 +10,8 @@ Parameters:
     Type: CommaDelimitedList
   SlackChannel:
     Type: String
+  AlarmUniqueName:
+    Type: String
 Resources:
   LambdaIamRole:
     Type: "AWS::IAM::Role"
@@ -105,7 +107,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: "[CMSResourceReporter][Lambda][Error] Invocation Error"
+      AlarmName: !Join ["", [ "[", !Ref AlarmUniqueName, "][ResourceReporter][Lambda][Error] Invocation Error"]]
       AlarmDescription:
         The error rate on the CMS Resource reporter has exceeded 0.
       ComparisonOperator: GreaterThanThreshold
