Add Zendesk verification TXT records

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -86,6 +86,11 @@ Resources:
           TTL: "300"
           Type: TXT
           Name: !Sub smtpapi._domainkey.${Domain}
+        - ResourceRecords:
+            - '"884ea8a417ab496f"'
+          TTL: "300"
+          Type: TXT
+          Name: !Sub zendesk_verification.${Domain}
   Highwinds:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
