--- a/dns/radiotopia.fm-hosted_zone.yml
+++ b/dns/radiotopia.fm-hosted_zone.yml
@@ -38,6 +38,11 @@ Resources:
           TTL: "300"
           Type: TXT
           Name: !Ref Domain
+        - ResourceRecords:
+            - '"26777e86e5712a38"'
+          TTL: "300"
+          Type: TXT
+          Name: !Sub zendesk_verification.${Domain}
   GSuite:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
