--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -56,6 +56,7 @@ Resources:
           Fn::ImportValue:
             !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
         CodeS3ObjectVersion: !Ref UploadLambdaCodeS3ObjectVersion
+        LogGroupRetentionPolicyFunctionArn: "/prx/infrastructure/log-group-retention-policy-function-arn"
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
