Fix string interpolation syntax in Upload template

--- a/stacks/serverless/upload.prx.org.yml
+++ b/stacks/serverless/upload.prx.org.yml
@@ -27,7 +27,7 @@ Resources:
     Type: "AWS::ApiGateway::RestApi"
     Properties:
       Name: !Ref AWS::StackName
-      Description: !Sub "{EnvironmentType} API used by PRX Upload Lambda"
+      Description: !Sub "${EnvironmentType} API used by PRX Upload Lambda"
   UploadRestApiSignatureResource:
     Type: "AWS::ApiGateway::Resource"
     Properties:
