--- a/etc/eventbrite-webhooks.yml
+++ b/etc/eventbrite-webhooks.yml
@@ -164,41 +164,21 @@ Resources:
 
               const remaining = (total_tickets - total_sold);
 
-              const attendees = [`<mailto:${order.email}|${order.name}>`];
-
-              if (order.attendees.length > 1) {
-                  attendees.push(`${order.attendees.length - 1}`);
-              }
+              const tickets = `${order.attendees.length} ticket${order.attendees.length > 1 ? 's' : ''}`;
 
               const adminUrl = `https://www.eventbrite.com/myevent?eid=${event.id}`;
               const orderUrl = `https://www.eventbrite.com/reports?eid=${event.id}&rid=h&filterby=all,${order.id}`;
 
-              const order_ts = (Date.parse(order.created) / 1000);
+              // const order_ts = (Date.parse(order.created) / 1000);
 
               return {
                   channel: SLACK_CHANNEL,
                   username: SLACK_USERNAME,
                   icon_emoji: SLACK_ICON,
-                  attachments: [
-                      {
-                          fallback: `${order.name} ordered ${order.attendees.length} ticket for ${event.name.text}`,
-                          pretext: `<${event.url}|${event.name.text}> <${adminUrl}|:gear:>`,
-                          ts: order_ts,
-                          title: `Order #${order.id}`,
-                          title_link: orderUrl,
-                          fields: [
-                              {
-                                  title: "Attendees",
-                                  value: attendees.join(' + '),
-                                  short: true
-                              }, {
-                                  title: "Remaining",
-                                  value: `${remaining} of ${total_tickets}`,
-                                  short: true
-                              }
-                          ]
-                      }
-                  ],
+                  text: [
+                      `<mailto:${order.email}|${order.name}> ordered <${orderUrl}|${tickets}> for <${event.url}|${event.name.text}> (<${adminUrl}|Manage>)`,
+                      `> ${total_sold} tickets ordered – ${remaining} remaining`
+                  ].join('\n')
               };
           }
 
