Add alarm actions to Eventbrite error alarm

--- a/etc/eventbrite-webhooks.yml
+++ b/etc/eventbrite-webhooks.yml
@@ -11,6 +11,8 @@ Parameters:
     Description: >
       The Parameter Store key for the log group retention policy function's
       ARN (not the ARN itself)
+  OpsErrorMessagesSnsTopicArn:
+    Type: String
 Resources:
   # API Gateway
   RestApi:
@@ -223,12 +225,12 @@ Resources:
     Properties:
       ActionsEnabled: true
       AlarmName: "[Eventbrite][Lambda][Error] Invocation 4XX"
-      # AlarmActions:
-      #   - !Ref OpsErrorMessagesSnsTopicArn
-      # InsufficientDataActions:
-      #   - !Ref OpsErrorMessagesSnsTopicArn
-      # OKActions:
-      #   - !Ref OpsErrorMessagesSnsTopicArn
+      AlarmActions:
+        - !Ref OpsErrorMessagesSnsTopicArn
+      InsufficientDataActions:
+        - !Ref OpsErrorMessagesSnsTopicArn
+      OKActions:
+        - !Ref OpsErrorMessagesSnsTopicArn
       AlarmDescription:
         The error rate on the Eventbrite lambda has exceeded 0
       ComparisonOperator: GreaterThanThreshold
