--- a/stacks/static-sites/radio.radiotopia.fm.yml
+++ b/stacks/static-sites/radio.radiotopia.fm.yml
@@ -23,6 +23,6 @@ Resources:
       ServiceToken: !Ref S3StaticSiteDeployFunctionArn
       Region: !Ref AWS::Region
       StaticSiteArchiveS3Bucket: !Ref CodeS3Bucket
-      StaticSiteArchiveS3Object: 's3-static/PRX-radio.radiotopia.fm.zip'
+      StaticSiteArchiveS3Object: "s3-static/PRX-radio.radiotopia.fm.zip"
       StaticSiteArchiveS3ObjectVersion: !Ref StaticSiteArchiveS3ObjectVersion
       StaticSiteS3DeployBucket: !If [IsProduction, !Ref StaticSiteS3ProductionDeployBucket, !Ref StaticSiteS3StagingDeployBucket]
