--- a/stacks/static-sites/root.yml
+++ b/stacks/static-sites/root.yml
@@ -19,6 +19,8 @@ Parameters:
     Type: String
   BetaPrxOrgArchiveS3ObjectVersion:
     Type: String
+  BacksawArchiveS3ObjectVersion:
+    Type: String
 Resources:
   # ## S3 static site deploy
   S3StaticSiteDeployIamRole:
@@ -74,6 +76,28 @@ Resources:
           Value: !Ref AWS::StackId
       Timeout: 60
   # Static site stacks
+  BacksawStack:
+    Type: "AWS::CloudFormation::Stack"
+    Properties:
+      NotificationARNs:
+        - Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+      Parameters:
+        CodeS3Bucket:
+          Fn::ImportValue:
+            !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
+        StaticSiteArchiveS3ObjectVersion: !Ref BacksawArchiveS3ObjectVersion
+        StaticSiteS3StagingDeployBucket: "/prx/stag/backsaw.prx.org/DEPLOY_S3_BUCKET"
+        StaticSiteS3ProductionDeployBucket: "/prx/prod/backsaw.prx.org/DEPLOY_S3_BUCKET"
+        EnvironmentType: !Ref EnvironmentType
+        S3StaticSiteDeployFunctionArn: !GetAtt S3StaticSiteDeployFunction.Arn
+      Tags:
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "backsaw.prx.org.yml"]]
+      TimeoutInMinutes: 5
   RadiotopiaRadioStack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
