--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -100,6 +100,8 @@ Parameters:
     Type: String
   BetaPrxOrgArchiveS3ObjectVersion:
     Type: String
+  BacksawArchiveS3ObjectVersion:
+    Type: String
   # Parameter Overrides
   InfrastructureStorageStackName:
     Type: String
@@ -183,6 +185,7 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         RadiotopiaRadioArchiveS3ObjectVersion: !Ref RadiotopiaRadioArchiveS3ObjectVersion
         BetaPrxOrgArchiveS3ObjectVersion: !Ref BetaPrxOrgArchiveS3ObjectVersion
+        BacksawArchiveS3ObjectVersion: !Ref BacksawArchiveS3ObjectVersion
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
