Filter pattern has changed

--- a/cdn/dovetail-cdn/dovetail-bytes-lambda-subscription.yml
+++ b/cdn/dovetail-cdn/dovetail-bytes-lambda-subscription.yml
@@ -72,7 +72,7 @@ Resources:
     Type: "AWS::Logs::SubscriptionFilter"
     Properties:
       DestinationArn: !Ref KinesisArn
-      FilterPattern: "{$.uuid = *}"
+      FilterPattern: "{$.digest = *}"
       LogGroupName: !Ref LambdaLogGroup
       RoleArn: !GetAtt LambdaSubscriptionRole.Arn
 Outputs:
