Faster health checks

--- a/stacks/castle.prx.org.yml
+++ b/stacks/castle.prx.org.yml
@@ -70,8 +70,10 @@ Resources:
   CastleALBTargetGroup:
     Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
     Properties:
-      HealthCheckIntervalSeconds: 60
-      UnhealthyThresholdCount: 10
+      HealthCheckIntervalSeconds: 15
+      HealthCheckTimeoutSeconds: 5
+      HealthyThresholdCount: 3
+      UnhealthyThresholdCount: 3
       HealthCheckPath: /api/v1
       Name: !Sub castle-${EnvironmentTypeAbbreviation}-${VPC}
       Port: 80
