--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -68,8 +68,10 @@ Resources:
   PlayALBTargetGroup:
     Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
     Properties:
-      HealthCheckIntervalSeconds: 60
-      UnhealthyThresholdCount: 10
+      HealthCheckIntervalSeconds: 15
+      HealthCheckTimeoutSeconds: 5
+      HealthyThresholdCount: 3
+      UnhealthyThresholdCount: 3
       HealthCheckPath: /
       Name: !Sub play-${EnvironmentTypeAbbreviation}-${VPC}
       Port: 80
