--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -66,8 +66,10 @@ Resources:
   PublishALBTargetGroup:
     Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
     Properties:
-      HealthCheckIntervalSeconds: 60
-      UnhealthyThresholdCount: 10
+      HealthCheckIntervalSeconds: 15
+      HealthCheckTimeoutSeconds: 5
+      HealthyThresholdCount: 3
+      UnhealthyThresholdCount: 3
       HealthCheckPath: /
       Name: !Sub publish-${EnvironmentTypeAbbreviation}-${VPC}
       Port: 80
