--- a/stacks/web-alb-application.yml
+++ b/stacks/web-alb-application.yml
@@ -152,8 +152,10 @@ Resources:
     Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
     DependsOn: ALB
     Properties:
-      HealthCheckIntervalSeconds: 60
-      HealthCheckTimeoutSeconds: 10
+      HealthCheckIntervalSeconds: 15
+      HealthCheckTimeoutSeconds: 5
+      HealthyThresholdCount: 3
+      UnhealthyThresholdCount: 3
       HealthCheckPath: !Ref HealthCheckPath
       Name: !Sub ${AppName}-${EnvironmentTypeAbbreviation}-${VPC}
       Port: 80
