Add create repo perm on policy

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -179,6 +179,7 @@ Resources:
                   - "ecr:CompleteLayerUpload"
                   - "ecr:UploadLayerPart"
                   - "ecr:PutImage"
+                  - "ecr:CreateRepository"
                 Resource:
                   - !Sub "arn:aws:ecr:us-east-1:${AWS::AccountId}:repository/*"
       ManagedPolicyArns:
