--- a/etc/cross-account-vpc-peering-requester.yml
+++ b/etc/cross-account-vpc-peering-requester.yml
@@ -49,7 +49,7 @@ Parameters:
     Description: >
       A name tag to give to the VPC peering connection
   VpcId:
-    Type: String
+    Type: AWS::EC2::VPC::Id
     Description: >
       The ID of the VPC in the requester account (where this stack is being
       launched)
@@ -67,7 +67,7 @@ Parameters:
     Description: >
       The account ID where the peering VPC exists
   PeerVpcId:
-    Type: String
+    Type: AWS::EC2::VPC::Id
     Description: >
       The ID of the VPC to peer with
   PeerRoleArn:
