Add new courier stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -48,6 +48,10 @@ Parameters:
     Type: String
   CmsSecretsVersion:
     Type: String
+  CourierEcrImageTag:
+    Type: String
+  CourierSecretsVersion:
+    Type: String
   CrierEcrImageTag:
     Type: String
   CrierSecretsVersion:
@@ -170,6 +174,8 @@ Mappings:
       prefix: 42
     StripeProxy:
       prefix: 46
+    Courier:
+      prefix: 50
 Resources:
   # Root stacks
   StaticSitesRootStack:
@@ -291,6 +297,10 @@ Resources:
         CmsPlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Cms, prefix]
         CmsEcrImageTag: !Ref CmsEcrImageTag
         CmsSecretsVersion: !Ref CmsSecretsVersion
+        # Courier
+        CourierPlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Courier, prefix]
+        CourierEcrImageTag: !Ref CourierEcrImageTag
+        CourierSecretsVersion: !Ref CourierSecretsVersion
         # Jingle
         JinglePlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Jingle, prefix]
         JingleEcrImageTag: !Ref JingleEcrImageTag
