--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -183,7 +183,7 @@ Resources:
         PlatformALBListenerPriorityPrefix: !Ref CourierPlatformALBListenerPriorityPrefix
         EcrImageTag: !Ref CourierEcrImageTag
         SecretsVersion: !Ref CourierSecretsVersion
-        AppName: "cms"
+        AppName: "courier"
         CreateWorker: "true"
         ContainerPort: "3000"
         HealthCheckPath: "/"
