Update the health check path

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -186,7 +186,7 @@ Resources:
         AppName: "courier"
         CreateWorker: "true"
         ContainerPort: "3000"
-        HealthCheckPath: "/"
+        HealthCheckPath: "/health_check"
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
