Add metric for lambda redirect (stale/expired arrangements)

--- a/cdn/dovetail-cdn/dovetail-stitch-lambda-filters.yml
+++ b/cdn/dovetail-cdn/dovetail-stitch-lambda-filters.yml
@@ -91,6 +91,15 @@ Resources:
         - MetricName: !Sub "dt_lambda_${EnvironmentTypeAbbreviation}_partial"
           MetricNamespace: LogMetrics
           MetricValue: $.timer
+  LambdaRedirectMetric:
+    Type: "AWS::Logs::MetricFilter"
+    Properties:
+      FilterPattern: '{ $.location = * }'
+      LogGroupName: !Ref LambdaLogGroup
+      MetricTransformations:
+        - MetricName: !Sub "dt_lambda_${EnvironmentTypeAbbreviation}_redirect"
+          MetricNamespace: LogMetrics
+          MetricValue: "1"
   LambdaInvokeMetric:
     Type: "AWS::Logs::MetricFilter"
     Properties:
